<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.EditReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/reminder_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.reminderTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:gravity="start"
            android:hint="@string/reminder_desc"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="10"
            android:text="@={viewModel.reminderDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_title" />

        <TextView
            android:id="@+id/select_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.onSelectLocationClicked()}"
            android:text="@string/reminder_location"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_location"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_description" />

        <TextView
            android:id="@+id/selected_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@{viewModel.reminderSelectedLocationStr}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/select_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/select_location"
            tools:text="Location" />

        <EditText
            android:id="@+id/radius_in_meters"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={com.udacity.project4.utils.Converter.intToString(viewModel.reminderRadiusInMeters)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius_m"
            app:layout_constraintBottom_toBottomOf="@id/radius_in_meters"
            app:layout_constraintStart_toEndOf="@+id/radius_in_meters"
            app:layout_constraintTop_toTopOf="@id/radius_in_meters" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/add_location_reminder_button"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:onClick="@{(view) -> viewModel.deleteReminder(view.context)}"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/saveReminder" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/add_location_reminder_button"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:onClick="@{(view) -> viewModel.saveReminder(view.context)}"
            android:src="@drawable/ic_save"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
